meja/tests/duplicate-names-in-pattern.meja
let (a, a) = (1, 2);
